# hs-information-retrieval

./: .gitignore  CHANGELOG.md  README.md  hs-information-retrieval.cabal
src/: IOUtils.hs  IncidenceMatrix.hs  InvertedIndex.hs  Main.hs  QueryParser.hs  TermDocument.hs
src/IR/: CoordinateInvertedIndex.hs  DoubleInvertedIndex.hs  IncidenceMatrix.hs  InvertedIndex.hs  KGramIndex.hs  PermutationIndex.hs  Set.hs  TermDocument.hs  Trie.hs
src/Parser/: BoolQueryParser.hs  CoordQueryParser.hs  DoubleBoolQueryParser.hs
src/Utils/: IO.hs
