name:                hs-information-retrieval
version:             0.1.0.0
synopsis:            Information retrieval and processing of FB2 files
description:         A program that processes FB2 files, generates a dictionary of terms, and saves the dictionary to disk.
homepage:            https://github.com/githubuser/hs-information-retrieval#readme
license:             BSD3
license-file:        LICENSE
author:              Kyrill Chernkozynskyi
maintainer:          example@example.com
copyright:           2023 Kyrill Chernkozynskyi
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable hs-information-retrieval
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , directory 
                     , text 
                     , regex-tdfa
                     , regex-compat
                     , containers
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
